--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,6 +188,7 @@ set(engine_TEST_INFILL
     SierpinskiFillTest
 )
 set(engine_TEST_UTILS
+    FingerTreeTest
     SparseGridTest
     IntPointTest
     LinearAlg2DTest
